--- a/RouteCar/app/src/main/AndroidManifest.xml
+++ b/RouteCar/app/src/main/AndroidManifest.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.routecar" >
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
+        <meta-data
+            android:name="com.skobbler.ngx.API_KEY"
+            android:value="0ee06f8dd98cea6e16a5beed11884a35e7be564b5e8a917289db31c20091db72"/>
         <activity
             android:name=".MapActivity"
             android:label="@string/app_name" >
