--- a/RouteCar/app/build.gradle
+++ b/RouteCar/app/build.gradle
@@ -22,4 +22,6 @@ android {
 dependencies {
     compile fileTree(include: '*.jar', dir: 'libs')
     compile 'com.android.support:support-v4:20.0.0'
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile project(':sdktools-release')
 }
