--- a/RouteCar/app/src/main/AndroidManifest.xml
+++ b/RouteCar/app/src/main/AndroidManifest.xml
@@ -15,14 +15,19 @@
             android:name="com.skobbler.ngx.API_KEY"
             android:value="0ee06f8dd98cea6e16a5beed11884a35e7be564b5e8a917289db31c20091db72"/>
         <activity
-            android:name=".MapActivity"
-            android:label="@string/app_name" >
+            android:name=".SplashActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/SplashActivityTheme">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MapActivity"
+            android:configChanges="orientation|screenSize"></activity>
     </application>
 
 </manifest>
