--- a/AndroidOpenSourceDemoGradle/app/src/main/AndroidManifest.xml
+++ b/AndroidOpenSourceDemoGradle/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.skobbler.sdkdemo"
     android:versionCode="2"
-    android:versionName="2.5">
+    android:versionName="2.5"
+    android:installLocation="preferExternal">
 
     <uses-sdk
         android:minSdkVersion="15"
